--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -65,26 +65,49 @@ tile.complexwiring.world.ore.secondary.vanilla.subbituminous.name=Sub-Bituminous
 tile.complexwiring.world.ore.secondary.vanilla.bituminous.name=Bituminous Ore
 tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Anthracite Ore
 
-tile.complexwiring.world.decor.limestoneRough.name=Rough Limestone
-tile.complexwiring.world.decor.dolomiteRough.name=Rough Dolomite
-tile.complexwiring.world.decor.areniteRough.name=Rough Arenite
+tile.complexwiring.world.decor.light.limestoneRough.name=Rough Limestone
+tile.complexwiring.world.decor.light.dolomiteRough.name=Rough Dolomite
+tile.complexwiring.world.decor.light.areniteRough.name=Rough Arenite
 
-tile.complexwiring.world.decor.limestone.name=Limestone
-tile.complexwiring.world.decor.dolomite.name=Dolomite
-tile.complexwiring.world.decor.arenite.name=Arenite
-tile.complexwiring.world.decor.darkDolomite.name=Dark Dolomite
+tile.complexwiring.world.decor.light.limestone.name=Limestone
+tile.complexwiring.world.decor.light.dolomite.name=Dolomite
+tile.complexwiring.world.decor.light.arenite.name=Arenite
 
-tile.complexwiring.world.decor.limestoneBrick.name=Limestone Brick
-tile.complexwiring.world.decor.dolomiteBrick.name=Dolomite Brick
-tile.complexwiring.world.decor.areniteBrick.name=Arenite Brick
-tile.complexwiring.world.decor.darkDolomiteBrick.name=Dark Dolomite Brick
+tile.complexwiring.world.decor.light.limestoneBrick.name=Limestone Brick
+tile.complexwiring.world.decor.light.dolomiteBrick.name=Dolomite Brick
+tile.complexwiring.world.decor.light.areniteBrick.name=Arenite Brick
 
-tile.complexwiring.world.decor.limestoneSmallbrick.name=Small Limestone Bricks
-tile.complexwiring.world.decor.dolomiteSmallbrick.name=Small Dolomite Bricks
-tile.complexwiring.world.decor.areniteSmallbrick.name=Small Arenite Bricks
-tile.complexwiring.world.decor.darkDolomiteSmallbrick.name=Small Dark Dolomite Bricks
+tile.complexwiring.world.decor.light.limestoneSmallbrick.name=Small Limestone Bricks
+tile.complexwiring.world.decor.light.dolomiteSmallbrick.name=Small Dolomite Bricks
+tile.complexwiring.world.decor.light.areniteSmallbrick.name=Small Arenite Bricks
 
-tile.complexwiring.world.decor.dolomiteDarkDolomiteMix.name=Dolomite - Dark Dolomite Mix
+tile.complexwiring.world.decor.light.limestoneTiled.name=Tiled Limestone
+tile.complexwiring.world.decor.light.dolomiteTiled.name=Tiled Dolomite
+tile.complexwiring.world.decor.light.areniteTiled.name=Tiled Arenite
+
+tile.complexwiring.world.decor.light.dolomiteMix.name=Mixed Dolomite
+
+tile.complexwiring.world.decor.dark.darkLimestoneRough.name=Rough Dark Limestone
+tile.complexwiring.world.decor.dark.darkDolomiteRough.name=Rough Dark Dolomite
+tile.complexwiring.world.decor.dark.darkAreniteRough.name=Rough Dark Arenite
+
+tile.complexwiring.world.decor.dark.darkLimestone.name=Dark Limestone
+tile.complexwiring.world.decor.dark.darkDolomite.name=Dark Dolomite
+tile.complexwiring.world.decor.dark.darkArenite.name=Dark Arenite
+
+tile.complexwiring.world.decor.dark.darkLimestoneBrick.name=Dark Limestone Brick
+tile.complexwiring.world.decor.dark.darkDolomiteBrick.name=Dark Dolomite Brick
+tile.complexwiring.world.decor.dark.darkAreniteBrick.name=Dark Arenite Brick
+
+tile.complexwiring.world.decor.dark.darkLimestoneSmallbrick.name=Small Dark Limestone Bricks
+tile.complexwiring.world.decor.dark.darkDolomiteSmallbrick.name=Small Dark Dolomite Bricks
+tile.complexwiring.world.decor.dark.darkAreniteSmallbrick.name=Small Dark Arenite Bricks
+
+tile.complexwiring.world.decor.dark.darkLimestoneTiled.name=Tiled Dark Limestone
+tile.complexwiring.world.decor.dark.darkDolomiteTiled.name=Tiled Dark Dolomite
+tile.complexwiring.world.decor.dark.darkAreniteTiled.name=Tiled Dark Arenite
+
+tile.complexwiring.world.decor.dark.limestoneMix.name=Mixed Limestone
 
 tile.complexwiring.mechanical.storagebox.basic.name=Basic Storage Box
 tile.complexwiring.mechanical.storagebox.basic.desc=32 stacks of storage!
