Locale for industrial materials

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -109,6 +109,45 @@ tile.complexwiring.world.decor.dark.darkAreniteTiled.name=Tiled Dark Arenite
 
 tile.complexwiring.world.decor.dark.limestoneMix.name=Mixed Limestone
 
+
+tile.complexwiring.world.industrial.stone.light.name=Light Industrial Stone
+tile.complexwiring.world.industrial.stone.lightRough.name=Rough Light Industrial Stone
+tile.complexwiring.world.industrial.stone.lightBrick.name=Light Industrial Brick
+tile.complexwiring.world.industrial.stone.lightSmallbrick.name=Small Light Industrial Bricks
+tile.complexwiring.world.industrial.stone.lightCobble.name=Light Industrial Cobblestone
+tile.complexwiring.world.industrial.stone.lightPaved.name=Paved Light Industrial Stone
+tile.complexwiring.world.industrial.stone.lightTiled.name=Tiled Light Industrial Stone
+tile.complexwiring.world.industrial.stone.lightChiseled.name=Chiseled Light Industrial Brick
+
+tile.complexwiring.world.industrial.stone.dark.name=Dark Industrial Stone
+tile.complexwiring.world.industrial.stone.darkRough.name=Rough Dark Industrial Stone
+tile.complexwiring.world.industrial.stone.darkBrick.name=Dark Industrial Brick
+tile.complexwiring.world.industrial.stone.darkSmallbrick.name=Small Dark Industrial Bricks
+tile.complexwiring.world.industrial.stone.darkCobble.name=Dark Industrial Cobblestone
+tile.complexwiring.world.industrial.stone.darkPaved.name=Paved Dark Industrial Stone
+tile.complexwiring.world.industrial.stone.darkTiled.name=Tiled Dark Industrial Stone
+tile.complexwiring.world.industrial.stone.darkChiseled.name=Chiseled Dark Industrial Brick
+
+
+tile.complexwiring.world.industrial.wood.light.name=Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightRough.name=Rough Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightTiled.name=Tiled Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightSmalltiled.name=Small Tiled Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightDouble.name=Double Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightSingle.name=Single Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightChiseled.name=Chiseled Light Industrial Wood
+tile.complexwiring.world.industrial.wood.lightPaved.name=Paved Light Industrial Wood
+
+tile.complexwiring.world.industrial.wood.dark.name=Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkRough.name=Rough Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkTiled.name=Tiled Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkSmalltiled.name=Small Tiled Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkDouble.name=Double Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkSingle.name=Single Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkChiseled.name=Chiseled Dark Industrial Wood
+tile.complexwiring.world.industrial.wood.darkPaved.name=Paved Dark Industrial Wood
+
+
 tile.complexwiring.mechanical.storagebox.basic.name=Basic Storage Box
 tile.complexwiring.mechanical.storagebox.basic.desc=32 stacks of storage!
 tile.complexwiring.mechanical.storagebox.advanced.name=Advanced Storage Box
