--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -174,6 +174,7 @@ item.complexwiring.base.nugget.silver.name=Silver Nugget
 item.complexwiring.base.nugget.lead.name=Lead Nugget
 
 item.complexwiring.base.screwdriver.name=Screwdriver
+item.complexwiring.base.debugger.name=Debugger tool
 
 item.complexwiring.base.component.woodpulp.name=Wood Pulp
 
