Fixed a nugget locale derp

--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -125,12 +125,12 @@ item.complexwiring.base.nugget.copper.name=Měděný nuget
 item.complexwiring.base.nugget.tin.name=Cínový nuget
 item.complexwiring.base.nugget.silver.name=Stříbrný nuget
 item.complexwiring.base.nugget.lead.name=Olověný nuget
-item.complexwiring.base.ingot.nickel.name=Niklový nuget
-item.complexwiring.base.ingot.aluminium.name=Hliníkový nuget
-item.complexwiring.base.ingot.tungsten.name=Wolframový nuget
-item.complexwiring.base.ingot.titanium.name=Titanový nuget
-item.complexwiring.base.ingot.zinc.name=Zinkový nuget
-item.complexwiring.base.ingot.cobalt.name=Kobaltový nuget
+item.complexwiring.base.nugget.nickel.name=Niklový nuget
+item.complexwiring.base.nugget.aluminium.name=Hliníkový nuget
+item.complexwiring.base.nugget.tungsten.name=Wolframový nuget
+item.complexwiring.base.nugget.titanium.name=Titanový nuget
+item.complexwiring.base.nugget.zinc.name=Zinkový nuget
+item.complexwiring.base.nugget.cobalt.name=Kobaltový nuget
 
 item.complexwiring.tablet.name=Tablet
 item.complexwiring.tablet.startpaper.name=§lPočátek
