--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -188,12 +188,12 @@ item.complexwiring.base.nugget.copper.name=Copper Nugget
 item.complexwiring.base.nugget.tin.name=Tin Nugget
 item.complexwiring.base.nugget.silver.name=Silver Nugget
 item.complexwiring.base.nugget.lead.name=Lead Nugget
-item.complexwiring.base.ingot.nickel.name=Nickel Nugget
-item.complexwiring.base.ingot.aluminium.name=Aluminium Nugget
-item.complexwiring.base.ingot.tungsten.name=Tungsten Nugget
-item.complexwiring.base.ingot.titanium.name=Titanium Nugget
-item.complexwiring.base.ingot.zinc.name=Zinc Nugget
-item.complexwiring.base.ingot.cobalt.name=Cobalt Nugget
+item.complexwiring.base.nugget.nickel.name=Nickel Nugget
+item.complexwiring.base.nugget.aluminium.name=Aluminium Nugget
+item.complexwiring.base.nugget.tungsten.name=Tungsten Nugget
+item.complexwiring.base.nugget.titanium.name=Titanium Nugget
+item.complexwiring.base.nugget.zinc.name=Zinc Nugget
+item.complexwiring.base.nugget.cobalt.name=Cobalt Nugget
 
 item.complexwiring.base.screwdriver.name=Screwdriver
 item.complexwiring.base.debugger.name=Debugger tool
